--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,17 @@
+<section class="bgimage">
+                        <div class="container-fluid">
+                                <div class="row">
+                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                                <h5>Hello, world! Full width Hero-unit header</h5>
+                                                <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                                                <p><a href="#" class="btn btn-primary btn-large">Learn more »</a></p>
+                                        </div>
+                                </div>
+                        </div>
+                </section>
+
 {% extends "layout.html" %}
-{% block content %}	
-	{% for post in posts %} 
-		<h1>{{ post.title }}</h1>
-		<p> By {{ post.author }} on {{ post.date_posted }}</p>
-		<p>{{ post.content }}</p>
-	{% endfor %}
+{% block content %}
+                <h1>Home Page</h1>
 {% endblock content %}
+
