--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,18 +25,18 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarToggle">
 					<div class="navbar-nav mr-auto">
-						<a class="nav-item nav-link" href="/">Home</a>
-						<a class="nav-item nav-link" href="/contact">Contact</a>
-						<a class="nav-item nav-link" href="/gallery">Gallery</a>
-						<a class="nav-item nav-link" href="/resources">Resources</a>
-						<a class="nav-item nav-link" href="/review">Reviews</a>
+						<a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
+						<a class="nav-item nav-link" href="{{ url_for('contact') }}">Contact</a>
+						<a class="nav-item nav-link" href="{{ url_for('gallery') }}">Gallery</a>
+						<a class="nav-item nav-link" href="{{ url_for('resources') }}">Resources</a>
+						<a class="nav-item nav-link" href="{{ url_for('review') }}">Reviews</a>
 
 
 					</div>
 					<!-- Navbar Right Side -->
 					<div class="navbar-nav">
-						<a class="nav-item nav-link" href="/login">Login</a>
-						<a class="nav-item nav-link" href="/register">Register</a>
+						<a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+						<a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
 
 					</div>
 				</div>
@@ -46,6 +46,15 @@
 	<main role="main" class="container">
  		<div class="row">
 			<div class="col-md-8">
+				{% with messages = get_flashed_messages(with_categories=true) %}
+					{% if messages %}
+						{% for category, message in messages%}
+							<div class="alert alert-{{ category }}">
+								{{ message }}
+							</div>	
+						{% endfor %}
+					{% endif %}
+				{% endwith %}
 				{% block content %}{% endblock %}
 			</div>
 			<div class="col-md-4">
