--- a/bop/templates/review.html
+++ b/bop/templates/review.html
@@ -1,13 +1,17 @@
 {% extends "layout.html" %}
 {% block content %}
+{% if current_user.is_authenticated %}
+	<a class="nav-item nav-link" href="{{ url_for('new_post') }}">WRITE A REVIEW</a>
+{% endif %}
     {% for post in posts %}
         <article class="media content-section">
+          <img class="rounded-circle article-img" src="{{ url_for('static', filename='img/profile_pic/' + post.author.image_file) }}">
           <div class="media-body">
             <div class="article-metadata">
-              <a class="mr-2" href="#">{{ post.author }}</a>
-              <small class="text-muted">{{ post.date_posted }}</small>
+              <a class="mr-2" href="#">{{ post.author.username }}</a>
+              <small class="text-muted">{{ post.date_posted.strftime('%d-%m-%Y') }}</small>
             </div>
-            <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+            <h2><a class="article-title" href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
             <p class="article-content">{{ post.content }}</p>
           </div>
         </article>
