--- a/bop/templates/contact.html
+++ b/bop/templates/contact.html
@@ -1,10 +1,75 @@
 {% extends "layout.html" %}
 {% block content %}
-		<h1>Contact Page</h1>
+	<div class="content-section">
+		<form method="POST" action="">
+			{{ form.hidden_tag() }}
+			<fieldset class="form-group">
+				<legend class="bottom mb-4">Contact us!</legend>
+				<div class="form-group">
+					{{ form.name.label(class="form-control-label") }}
+
+					{% if form.name.errors %}
+						{{ form.name(class="form-control form-control-lg is-invalid")}}
+						<div class="invalid-feedback">
+							{% for error in form.name.errors %}
+								<span>{{ error }}</span>
+							{% endfor %}
+						</div>
+					{% else %}
+						 {{ form.name(class="form-control form-control-lg") }}
+					{% endif %}
+				</div>
+				<div class="form-group">
+                                        {{ form.email.label(class="form-control-label") }}
+                                        
+					{% if form.email.errors %}
+                                                {{ form.email(class="form-control form-control-lg is-invalid")}}
+                                                <div class="invalid-feedback">
+                                                        {% for error in form.email.errors %}
+                                                                <span>{{ error }}</span>
+                                                        {% endfor %}
+                                                </div>
+                                        {% else %}
+                                                 {{ form.email(class="form-control form-control-lg") }}
+                                        {% endif %}
+
+                                </div>
+				<div class="form-group">
+                                        {{ form.subject.label(class="form-control-label") }}
+                                        
+					{% if form.subject.errors %}
+                                                {{ form.subject(class="form-control form-control-lg is-invalid")}}
+                                                <div class="invalid-feedback">
+                                                        {% for error in form.subject.errors %}
+                                                                <span>{{ error }}</span>
+                                                        {% endfor %}
+                                                </div>
+                                        {% else %}
+                                                 {{ form.subject(class="form-control form-control-lg") }}
+                                        {% endif %}
+
+                                </div>
+				<div class="form-group">
+                                        {{ form.message.label(class="form-control-label") }}
+                                        
+					{% if form.message.errors %}
+                                                {{ form.message(class="form-control form-control-lg is-invalid")}}
+                                                <div class="invalid-feedback">
+                                                        {% for error in form.message.errors %}
+                                                                <span>{{ error }}</span>
+                                                        {% endfor %}
+                                                </div>
+                                        {% else %}
+                                                 {{ form.message(class="form-control form-control-lg") }}
+                                        {% endif %}
+
+                                </div>
+			</fieldset>
+			<div class="form-group">
+                {{ form.submit(class="btn btn-outline-info") }}
+            </div>
+        </form>
+    </div>
+    <div class="border-top pt-3">
+    </div>
 {% endblock content %}
-
-
-
-
-
-
