--- a/bop/templates/layout.html
+++ b/bop/templates/layout.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/resources.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/gallery.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/media_query.css') }}">
 	
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
@@ -18,22 +19,24 @@
         {% else %}
                 <title>Bliss of Pain</title>
         {% endif %}
+
 </head>
 <body>
 	<header class="site-header">
 		<nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
 			<div class="container">
-				<a class="navbar-brand mr-4" href="/">Bliss of Pain</a>
+				<img class="navbar-brand mr-4" src="{{url_for('static', filename='img/profile_pic/BoPwN.png')}}">
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarToggle">
-					<div class="navbar-nav mr-auto">
-						<a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
-						<a class="nav-item nav-link" href="{{ url_for('contact') }}">Contact</a>
-						<a class="nav-item nav-link" href="{{ url_for('gallery') }}">Gallery</a>
-						<a class="nav-item nav-link" href="{{ url_for('resources') }}">Resources</a>
-						<a class="nav-item nav-link" href="{{ url_for('review') }}">Reviews</a>
+					<div class="navbar-nav mr-auto">	
+
+						<div class="cl-effect-1"><a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a></div>
+						<div class="cl-effect-1"><a class="nav-item nav-link" href="{{ url_for('contact') }}">Contact</a></div>
+						<div class="cl-effect-1"><a class="nav-item nav-link" href="{{ url_for('gallery') }}">Gallery</a></div>
+						<div class="cl-effect-1"><a class="nav-item nav-link" href="{{ url_for('resources') }}">Resources</a></div>
+						<div class="cl-effect-1"><a class="nav-item nav-link" href="{{ url_for('review') }}">Reviews</a></div>
 
 
 					</div>
@@ -41,11 +44,11 @@
 					<div class="navbar-nav">
 						{% if current_user.is_authenticated %}
 
-							 <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
-							 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+							<div class="cl-effect-1"><a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a></div>
+							<div class="cl-effect-1"><a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a></div>
 						{% else %}
-							<a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-							<a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+							<div class="cl-effect-1"><a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a></div>
+							<div class="cl-effect-1"><a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a></div>
 						{% endif %}		
 
 
