--- a/bop/templates/register.html
+++ b/bop/templates/register.html
@@ -70,9 +70,9 @@
             </div>
         </form>
     </div>
-    <div class="border-top pt-3">
+    <div class="border-top pt-2">
         <small class="text-muted">
-            Already Have An Account? <a class="ml-.5" href="{{ url_for('login') }}">Sign In</a>
+            Already Have An Account? <a class="ml-1" href="{{ url_for('login') }}">Sign In</a>
         </small>
     </div>
 {% endblock content %}
