--- a/bop/templates/register.html
+++ b/bop/templates/register.html
@@ -7,7 +7,7 @@
 				<legend class="bottom mb-4">Join Today</legend>
 				<div class="form-group">
 					{{ form.username.label(class="form-control-label") }}
-
+					<!--Conditional to print out the errors-->
 					{% if form.username.errors %}
 						{{ form.username(class="form-control form-control-lg is-invalid")}}
 						<div class="invalid-feedback">
@@ -21,7 +21,7 @@
 				</div>
 				<div class="form-group">
                                         {{ form.email.label(class="form-control-label") }}
-                                        
+                                        <!--Conditional to print out the errors-->
 					{% if form.email.errors %}
                                                 {{ form.email(class="form-control form-control-lg is-invalid")}}
                                                 <div class="invalid-feedback">
@@ -36,7 +36,7 @@
                                 </div>
 				<div class="form-group">
                                         {{ form.password.label(class="form-control-label") }}
-                                        
+                                        <!--Conditional to print out the errors-->
 					{% if form.password.errors %}
                                                 {{ form.password(class="form-control form-control-lg is-invalid")}}
                                                 <div class="invalid-feedback">
@@ -51,7 +51,7 @@
                                 </div>
 				<div class="form-group">
                                         {{ form.confirm_password.label(class="form-control-label") }}
-                                        
+                                        <!--Conditional to print out the errors-->
 					{% if form.confirm_password.errors %}
                                                 {{ form.confirm_password(class="form-control form-control-lg is-invalid")}}
                                                 <div class="invalid-feedback">
