--- a/bop/static/css/main.css
+++ b/bop/static/css/main.css
@@ -15,9 +15,13 @@ h1, h2, h3, h4, h5, h6 {
     margin-left: auto!important;
     margin-right: auto!important;
 }
+.navbar-brand .album-photo{
+    padding-top: 0;
+    padding-bottom: 0;
+}  
 
-img.navbar-brand.mr-4 {
-    width: 90px;
+.container img {
+    height: 90px;
 }
 
 .site-header .navbar-nav .nav-link {
@@ -132,7 +136,7 @@ a.article-title:hover {
 }
 
 .article-img {
-  height: 65px;
+  height: 65px!important;
   width: 65px;
   margin-right: 16px;
 }
@@ -164,3 +168,28 @@ a.article-title:hover {
 .account-heading {
   font-size: 2.5rem;
 }
+@media screen and (min-width: 995px){
+    .navbar-expand-md .navbar-toggler {
+    display: none;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    }
+}
+@media screen and (min-width: 995px){
+    .navbar-expand-md .navbar-toggler {
+    display: none;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    }
+}
+
