--- a/bop/templates/gallery.html
+++ b/bop/templates/gallery.html
@@ -1,30 +1,17 @@
 {% extends "layout.html" %}
 {% block content %}
-
 	<div id="albums">
-		<div class="album-wrapper">
-			<div class="album-photo">
-				{% for album in albums[1: ] %}
-				<a href="{{ url_for('album') }}{{album}}"><img class="navbar-brand mr-4" src="{{url_for('static', filename='img/profile_pic/BoPwN.png')}}"></a>
-                        	{% endfor %}
-			</div>
-		</div>
-	</div>
-
-	<div id="albums">
+		{% for album in albums[1: ] %}
                 <div class="album-wrapper">
-                        <div class="album-photo">
-                                {% for album in albums[1: ] %}
+			<div class="album-photo">
 				<a href="{{ url_for('album') }}{{ album }}"><img class="navbar-brand mr-4" src="{{url_for('static', filename='img/galleries/')}}{{album}}{{'/'}}{{album_image[0]}}"></a>
-                                {% endfor %}
-                        </div>
-                </div>
-        </div>
-
-	
-			{% for album in albums %}
-                        <a href="{{ url_for('album') }}{{album}}">{{album}}</br></a>
-                        {% endfor %}
-
-
+			</div>
+			<div class="album-title">{{ album }}</div>
+		</div>
+		{% endfor %}
+	</div>	
+	<div class="list">
+    		
 {% endblock content %}
+
+
