--- a/bop/templates/home.html
+++ b/bop/templates/home.html
@@ -2,16 +2,35 @@
                         <div class="container-fluid">
                                 <div class="row">
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                                <h5>Hello, world! Full width Hero-unit header</h5>
-                                                <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                                                <p><a href="#" class="btn btn-primary btn-large">Learn more »</a></p>
-                                        </div>
+						<img class="bgimage-image" src="{{url_for('static', filename='img/profile_pic/BoPwN.png')}}"                                        
+					</div>
                                 </div>
                         </div>
                 </section>
 
 {% extends "layout.html" %}
 {% block content %}
-                <h1>Home Page</h1>
+	<!-- Three columns of text below the carousel -->
+        <div class="row">
+          <div class="col-lg-4">
+            <img class="rounded-circle" src="{{url_for('static', filename='img/suspension-positions.jpg')}}" alt="image">
+            <h2>Heading</h2>
+            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          </div><!-- /.col-lg-4 -->
+          <div class="col-lg-4">
+            <img class="rounded-circle" src="{{url_for('static', filename='img/suspension-positions.jpg')}}" alt="image">
+            <h2>Heading</h2>
+            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          </div><!-- /.col-lg-4 -->
+          <div class="col-lg-4">
+            <img class="rounded-circle" src="{{url_for('static', filename='img/suspension-positions.jpg')}}" alt="image">
+            <h2>Heading</h2>
+            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->	
+
 {% endblock content %}
 
