--- a/bop/templates/home.html
+++ b/bop/templates/home.html
@@ -1,4 +1,4 @@
-<section class="bgimage">
+<section id="1" class="bgimage">
                         <div class="container-fluid">
                                 <div class="row">
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -31,11 +31,13 @@
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->	
-
-<section class="bgimage">
+	
+<section class="bgimage 2">
                         <div class="container-fluid">
                                 <div class="row">
-                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+						<div id="instafeed"></div>
+					</div>
                                 </div>
                         </div>
                 </section>
