--- a/bop/templates/layout.html
+++ b/bop/templates/layout.html
@@ -10,9 +10,11 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/resources.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/gallery.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/footer.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/media_query.css') }}">
 	
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Chivo|Unica+One|Prompt|Abel" rel="stylesheet">
 	<!--if exists, set title of each page. if not, set default 'Bliss of Pain'--->
         {% if title %}
                 <title>Bliss of Pain - {{ title }}</title>
@@ -22,6 +24,7 @@
 
 </head>
 <body>
+	<div id="1" class="header-bg"></div>
 	<header class="site-header">
 		<nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
 			<div class="container">
@@ -33,10 +36,10 @@
 					<div class="navbar-nav mr-auto">	
 
 						<div class="cl-effect-1"><a class="nav-item nav-link{% if active=='home' %} active{%endif %}" href="{{ url_for('home') }}">Home</a></div>
-						<div class="cl-effect-1"><a class="nav-item nav-link{% if active=='contact' %} active{%endif %}" href="{{ url_for('contact') }}">Contact</a></div>
 						<div class="cl-effect-1"><a class="nav-item nav-link{% if active=='gallery' %} active{%endif %}" href="{{ url_for('gallery') }}">Gallery</a></div>
 						<div class="cl-effect-1"><a class="nav-item nav-link{% if active=='resources' %} active{%endif %}" href="{{ url_for('resources') }}">Resources</a></div>
-						<div class="cl-effect-1"><a class="nav-item nav-link{% if active=='review' %} active{%endif %}" href="{{ url_for('review') }}">Reviews</a></div>	
+						<div class="cl-effect-1"><a class="nav-item nav-link{% if active=='review' %} active{%endif %}" href="{{ url_for('review') }}">Reviews</a></div>
+						<div class="cl-effect-1"><a class="nav-item nav-link{% if active=='contact' %} active{%endif %}" href="{{ url_for('contact') }}">Contact</a></div>
 
 					</div>
 					<!-- Navbar Right Side -->
@@ -77,13 +80,50 @@
 		</div>
 	</main>
 
+	<footer>
+    
+    <div id="footer-wrapper">
+        <div class="footer-links">
+            <div class="footer-links-item">
+                <div class="footer-links-item-wrapper">
+                    <a href="{{ url_for('contact') }}">Contact</a>
+                    <a href="{{ url_for('resources') }}">FAQ</a>
+                    <a href="https://suspension.org/">ISA</a>
+                    <a href="{{ url_for('login') }}">Log in</a>
+                </div>
+                <div class="fading_line"></div>
+            </div>
+            <div class="footer-links-social">
+                <div class="footer-links-social-icon">
+                    <a href="https://www.facebook.com/BlissOfPain/" target="blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><title>Facebook</title><path d="M448 56.7v398.5c0 13.7-11.1 24.7-24.7 24.7H309.1V306.5h58.2l8.7-67.6h-67v-43.2c0-19.6 5.4-32.9 33.5-32.9h35.8v-60.5c-6.2-.8-27.4-2.7-52.2-2.7-51.6 0-87 31.5-87 89.4v49.9h-58.4v67.6h58.4V480H24.7C11.1 480 0 468.9 0 455.3V56.7C0 43.1 11.1 32 24.7 32h398.5c13.7 0 24.8 11.1 24.8 24.7z" alt="facebook"/></svg></a>
+                    <a href="https://www.instagram.com/blissofpain/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><title>instagram</title><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg></a>
+                    <a href="https://www.flickr.com/photos/picturesinblood/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><title>flickr</title><path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zM144.5 319c-35.1 0-63.5-28.4-63.5-63.5s28.4-63.5 63.5-63.5 63.5 28.4 63.5 63.5-28.4 63.5-63.5 63.5zm159 0c-35.1 0-63.5-28.4-63.5-63.5s28.4-63.5 63.5-63.5 63.5 28.4 63.5 63.5-28.4 63.5-63.5 63.5z"/></svg></a>
+                    <a href="https://www.picturesinblood.com/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144 274"><title>picturesinblood</title><path d="M 149.04 94.47 h 2.11 c -0.62 -5.99 -4.4 -7.36 -8.46 -9.51 c 0.44 -25.24 0.62 -44.79 -10.57 -60.25 c -5.11 -7.05 -47.57 -25.5 -62.37 -22.2 c -12.64 2.82 -24.84 9.56 -34.88 15.86 c -13.08 8.19 -17.97 17.13 -22.2 34.88 c -1.06 4.45 -2.73 17.93 0 22.2 C 12.99 86.8 7.57 88.48 1.05 92.35 c 0.35 2.42 0.48 2.64 1.06 4.23 c 4.45 0 8.06 -0.26 10.57 -2.11 h 2.11 c -1.1 9.6 -15.02 29.99 -8.46 35.94 c -0.26 8.85 1.72 11.1 7.4 13.74 c -1.06 6.03 -5.24 8.59 -6.34 13.74 c -1.06 4.84 2.77 3.17 2.11 7.4 c -0.84 5.37 -2.77 16.3 -3.17 23.26 h 3.17 c -0.04 8.32 -3.74 20.52 0 27.48 c 1.06 0.35 2.11 0.7 3.17 1.06 v 14.8 c 0 0 5.2 10.44 5.29 10.57 c 1.45 0.75 1.32 0.35 3.17 -1.06 c 9.47 3.35 12.82 17.27 21.14 22.2 c 3.44 2.03 3.92 -1.32 7.4 0 c 8.94 3.39 20.35 17.09 23.26 26.43 h 1.06 c 1.01 -1.59 8.98 -12.16 12.86 -16.82 c -4.49 3.35 -8.32 7.36 -11.8 12.6 c -8.15 -2.2 -8.41 -11.94 -13.74 -16.91 c -0.18 -0.13 -10.57 -6.34 -10.57 -6.34 h -7.4 c -3.66 -1.72 -17.57 -18.89 -19.03 -23.26 c -2.11 0.35 -4.23 0.7 -6.34 1.06 c -0.31 -3.66 -0.53 -6.91 -3.17 -8.46 V 211.8 c -1.81 0.66 -1.01 0.22 -2.11 1.06 c -5.15 -3.08 -1.54 -17.53 -1.06 -25.37 H 8.45 c 0.44 -8.41 0.13 -22.29 5.29 -26.43 c -1.67 -3.35 -0.7 -1.28 -4.23 -1.06 c 0.7 -5.64 2.73 -10 6.34 -12.68 c -0.66 -5.15 -3.92 -6.47 -7.4 -8.46 c -0.22 -8.06 -4.54 -15.42 -1.06 -23.26 c 1.23 -2.73 5.2 -3.08 6.34 -6.34 c 2.07 -5.86 0.7 -10.83 4.23 -14.8 v -1.06 h 2.11 c -0.66 14.53 -6.25 31.93 1.06 45.45 c 4.14 7.66 14.01 12.11 19.03 19.03 c 4.71 6.52 8.54 14.58 12.68 21.14 c 7.53 -0.31 9.87 -8.02 4.23 -11.63 c 0 -3.52 0.31 -6.3 1.06 -8.46 c 8.02 -0.13 20.17 -1.28 25.37 2.11 c 1.06 0.35 2.11 0.7 3.17 1.06 c -0.48 5.64 -2.64 6.43 -7.4 7.4 v 2.11 c 0.84 1.1 0.4 0.26 1.06 2.11 c 15.81 -1.41 29.91 -22.33 39.11 -31.71 c 4.27 -4.36 11.58 -8.59 13.74 -14.8 c 3.48 -9.87 1.89 -23.65 1.06 -33.83 h 3.17 c 1.1 8.02 2.07 15.24 2.11 23.26 c 5.99 1.23 9.51 7.31 7.4 15.86 c -1.67 6.83 -5.9 11.1 -7.4 16.91 c -1.41 5.37 3.48 7.93 4.23 10.57 c 1.19 4.1 -2.64 1.94 -2.11 5.29 c 0.97 6.21 4.89 17.49 5.29 25.37 h -4.23 c 0.4 3.04 0.7 4.58 2.11 6.34 v 16.91 c -1.63 -0.57 -1.76 -0.75 -4.23 -1.06 c 0.35 6.69 0.7 13.39 1.06 20.08 c -3.39 -0.92 -1.63 0.57 -3.17 -2.11 c -3.13 3.96 -2.99 11.1 -6.34 14.8 c -2.29 1.37 -3.13 -1.01 -5.29 0 c -2.2 1.01 -2.77 5.42 -4.23 7.4 c -3.83 5.24 -9.65 9.78 -15.86 12.68 c -0.35 -1.06 -0.7 -2.11 -1.06 -3.17 c -5.81 2.69 -10.88 5.24 -15.37 8.19 c 1.59 -0.26 3.22 -0.53 4.8 -0.79 c 1.67 -0.7 4.62 -3.79 6.34 -4.23 c 3.26 -0.84 3.92 2.07 4.23 2.11 c 2.2 0.35 8.81 -4.01 10.57 -5.29 c 3.52 -4.58 7.05 -9.16 10.57 -13.74 c 2.33 -1.19 5.51 1.23 8.46 -3.17 c 5.29 -7.88 -0.92 -8.24 8.46 -11.63 c -1.76 -5.33 -1.1 -11.06 -1.06 -17.97 c 2.16 0.44 2.03 0.26 3.17 1.06 h 2.11 c -2.16 -6.3 -1.98 -18.63 -3.17 -24.31 c 1.63 -0.57 1.76 -0.75 4.23 -1.06 c -0.62 -7.44 -3.39 -16.08 -4.23 -23.26 c -0.26 -2.42 2.16 -4.01 1.06 -7.4 c -0.93 -2.86 -5.64 -6.17 -5.29 -10.57 c 0 0 3.08 -2.86 3.17 -3.17 c 3.04 -8.9 4.23 -14.53 4.23 -26.43 c -2.64 -2.51 -3.83 -4.54 -7.4 -6.34 c 0 -7.36 -0.66 -14.01 -1.06 -20.08 C 143.75 94.69 146.92 95.65 149.04 94.47 Z M 136.35 39.5 c 6.61 8.1 4.58 29.99 4.23 44.4 c -2.16 -0.44 -2.03 -0.26 -3.17 -1.06 h -2.11 C 135.65 68.39 136 53.94 136.35 39.5 Z M 21.13 34.21 c 10.04 -9.65 20.7 -17.57 33.83 -24.31 c 4.93 -1.76 9.87 -3.52 14.8 -5.29 c 20.3 0.31 58.49 12.07 63.42 26.43 c 0.35 8.1 0.7 16.21 1.06 24.31 c 0 6.96 1.98 20.57 -1.06 25.37 c -4.71 2.07 -20.97 -3.7 -27.48 -5.29 c -20.48 -5.02 -69.5 -2.73 -82.45 6.34 h -2.11 V 34.21 Z M 17.96 38.44 c 5.95 9.6 -3.74 31.58 2.11 41.23 c -1.1 2.86 -1.5 2.33 -3.17 4.23 h -2.11 c -0.35 -10.57 -0.7 -21.14 -1.06 -31.71 C 14.79 47.65 17.17 43.11 17.96 38.44 Z M 27.48 97.64 c 2.2 -6.69 20.83 -13.87 28.54 -7.4 c 1.81 0.66 1.01 0.22 2.11 1.06 c 0.79 1.15 0.66 0.97 1.06 3.17 c -5.29 0.7 -29.42 3.26 -29.6 3.17 H 27.48 Z M 32.76 102.92 v -1.06 h 1.06 c 2.03 -2.47 4.76 -2.38 7.4 -4.23 c 5.68 -0.09 12.82 -0.35 16.91 1.06 v 2.11 c -1.81 1.72 -3.08 3.92 -4.23 6.34 C 43.6 109.13 41.17 104.33 32.76 102.92 Z M 63.42 126.18 v 3.17 c -3.3 0.92 -4.67 2.55 -7.4 1.06 c -2.55 -1.41 -0.75 0.48 -2.11 -2.11 c -0.84 -1.1 -0.4 -0.26 -1.06 -2.11 c 1.32 -0.7 2.2 -1.15 3.17 -2.11 C 60.42 124.28 60.86 124.81 63.42 126.18 Z M 95.13 158.95 c -11.14 -2.25 -32.2 -8.98 -43.34 0 c -2.42 -0.35 -2.64 -0.48 -4.23 -1.06 c 0.35 -2.42 0.48 -2.64 1.06 -4.23 c 10.22 -2.38 33.08 -8.32 42.28 -1.06 c 2.47 0.79 2.38 1.1 4.23 2.11 V 158.95 Z M 73.99 126.18 c 0.75 -3.3 0.7 -2.2 2.11 -4.23 c 2.69 0.13 3.92 0.13 5.29 1.06 c 1.06 0.35 2.11 0.7 3.17 1.06 c -0.44 2.16 -0.26 2.03 -1.06 3.17 c -1.37 0.75 -5.33 0.48 -7.4 -1.06 H 73.99 Z M 113.1 100.81 h -1.06 c -1.59 4.54 -4.36 4.58 -7.4 7.4 c -8.24 -0.62 -10.79 -4.05 -15.86 -7.4 v -3.17 c 7.44 -1.06 18.45 -2.42 23.26 2.11 C 112.04 99.75 114.15 99.75 113.1 100.81 Z M 122.61 99.75 c -5.46 -1.5 -9.43 -4.93 -14.8 -6.34 c -9.43 -2.42 -19.38 1.54 -26.43 1.06 v -4.23 c 12.86 -3.26 35.59 -6.25 40.17 7.4 h 1.06 V 99.75 Z M 30.65 89.18 c -8.15 2.11 -18.89 1.06 -25.37 5.29 H 4.22 v -2.11 c 9.43 -5.55 22.15 -9.38 33.83 -12.68 c 6.08 -1.72 14.05 -0.22 19.03 -3.17 c 30.92 0 80.16 -0.62 91.96 16.91 C 116.4 82.04 66.41 79.84 30.65 89.18 Z"/><path d="M99.36,41.61c1.15-2.47,3.39-4.62,5.29-6.34c-0.75-4.76-2.25-5.37-4.23-8.46c-7.75-0.35-15.5-0.7-23.26-1.06  c-0.22-6.08-0.18-8.94,4.23-10.57v-2.11H69.76c1.28,2.38,1.81,2.11,4.23,3.17v4.23c-9.95-0.57-32.72,0-25.37,11.63  c0.97,2.86,1.81,3.08,3.17,5.29c3.96,0.79,9.38,1.15,14.8,1.06c0.44,6.56,1.5,11.54-4.23,12.68c2.25,1.5,7.75,1.19,11.63,1.06  c0.09,3.26,0.13,6.65-1.06,8.46c-1.54,2.64,0.26,1.23-3.17,2.11v2.11h11.63c-1.01-2.29-2.51-3.79-4.23-5.29  c3.66-5.37,15.37,0.22,22.2-2.11c3.08-1.06,4.23-4.32,6.34-6.34C105.35,45.05,103.63,43.64,99.36,41.61z M65.53,37.38  c-2.47-0.22-2.99-0.22-4.23-1.06c-6.56,0.31-12.51-3.74-8.46-9.51c0.35-1.06,0.7-2.11,1.06-3.17c3.48-0.7,7.84-1.15,12.68-1.06  C66.67,27.69,66.76,33.82,65.53,37.38z M73.99,51.13h-3.17c-0.66-1.81-0.22-1.01-1.06-2.11c-0.13-6.78-1.94-20.74,1.06-25.37  c1.15-0.79,0.97-0.66,3.17-1.06V51.13z M80.33,55.35v1.06h-2.11V27.87C82.4,29.68,83.63,50.64,80.33,55.35z M84.56,27.87  c7.84-0.18,11.63,0.53,15.86,3.17c0.09,5.68,0.04,7.05-4.23,8.46c-2.25,1.5-7.75,1.19-11.63,1.06V27.87z M100.41,52.18v2.11  c-2.25,0.53-3.83,0.93-5.29,2.11c-4.05,0.04-7.97-0.18-10.57-1.06c-0.09-4.85-0.09-10.44,1.06-13.74c4.89-0.04,9.82,0.09,12.68,2.11  h2.11C101.07,46.63,102.17,49.58,100.41,52.18z"/></svg></a>              
+                    <a href="https://youtu.be/z6-ylCh3nFI" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><title>youtube</title><path d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"/></svg></a>
+                </div>
+            </div>
+        </div>
+        <div class="fading_line-bg"></div>
+        <div class="footer-copyright">
+            <div class="copyright-wrapper">
+                <p>&copy; 2019 Bliss of Pain</p>
+                <p>|</p>
+                <p>Developed by Jakub Blazewicz</p>
+            </div>
+            <div class="footer-arrow-up">
+                <a href="#1"><p>TO THE SURFACE</p><i class="fas fa-arrow-up"></i></a>
+            </div> 
+        </div>
+    </div>
+
+</footer>
+
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script src="{{ url_for('static', filename='js/gallery.js') }}"></script>
-
 </body>
 </html>
 
