--- a/bop/templates/home.html
+++ b/bop/templates/home.html
@@ -36,10 +36,43 @@
                         <div class="container-fluid">
                                 <div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<div id="instafeed"></div>
+						<div class="center">
+							<div id="instafeed" class="insta-wrapper"></div>
+						</div>
 					</div>
                                 </div>
                         </div>
                 </section>
+
+
+<script type="text/javascript">
+    $(document).ready(function(){
+      $('.center').slick({
+  	centerMode: true,
+  	centerPadding: '60px',
+  	slidesToShow: 3,
+  	responsive: [
+    {
+      	breakpoint: 768,
+      	settings: {
+        arrows: false,
+        centerMode: true,
+        centerPadding: '40px',
+        slidesToShow: 3
+      }
+    },
+    {
+      	breakpoint: 480,
+      	settings: {
+        arrows: false,
+        centerMode: true,
+        centerPadding: '40px',
+        slidesToShow: 1
+      }
+    }
+  ]
+});
+    });
+</script>		
 {% endblock content %}
 
