--- a/bop/templates/home.html
+++ b/bop/templates/home.html
@@ -32,14 +32,19 @@
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->	
 	
-<section class="bgimage 2">
-                        <div class="container-fluid">
-                                <div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<div id="instafeed" class="insta-wrapper"></div>
+	<section class="bgimage 2">
+        	<div class="container-fluid">
+                	<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<div class="title-home"><h1>Instagram Feed</h1></div>
+					<div class="instaimg" id="crs-wrapper">
+						<div id="instafeed" class="instafeed-wrapper">
+						</div>
 					</div>
-                                </div>
+				</div>
                         </div>
-                </section>		
+                </div>
+        </section>	
+
 {% endblock content %}
 
