--- a/bop/static/css/media_query.css
+++ b/bop/static/css/media_query.css
@@ -3,14 +3,35 @@
         column-count: 3;
     }
 }
+@media screen and (max-width: 1000px) {
+    header {
+    font-size: 16px;
+    }
+}
 @media screen and (max-width: 950px) {
     .gallery-image-wrapper {
         column-count: 2;
+    }
+    header {
+    font-size: 14px;
     }
 }
 @media screen and (max-width: 650px) { 
     .gallery-image-wrapper {
         column-count: 1;
+    }
+    #footer-wrapper .footer-links {
+    flex-flow: column;
+    }
+    #footer-wrapper .footer-links-item {
+    max-width: 100%;
+    }
+    #footer-wrapper .footer-links-social {
+    max-width: 100%;
+    padding-top: 10px;
+    }
+    .bgimage{
+    width: 101vw;
     }
 }
 
